exports[`test Appended to an element 1`] = `
"<div style=\"position: relative; width: 100px; height: 100px;\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: center 1`] = `
"<div class=\"pe-ripple pe-ripple--constrained\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: constrained (false) 1`] = `
"<div class=\"pe-ripple\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: constrained (true) 1`] = `
"<div class=\"pe-ripple pe-ripple--constrained\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: disabled 1`] = `
"
"
`;

exports[`test Option: duration (3.0) 1`] = `
"<div class=\"pe-ripple pe-ripple--constrained\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: end (after click) 1`] = `
"<div class=\"pe-ripple pe-ripple--constrained\">
  <div>
    end called: 0
  </div>
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: end opacity (0.1) 1`] = `
"<div class=\"pe-ripple pe-ripple--constrained\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: initial opacityDecayVelocity (0.1) 1`] = `
"<div class=\"pe-ripple pe-ripple--constrained\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: start (after click) 1`] = `
"<div class=\"pe-ripple pe-ripple--constrained\">
  <div>
    start called: 0
  </div>
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: start opacity (0.5) 1`] = `
"<div class=\"pe-ripple pe-ripple--constrained\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: style (color) 1`] = `
"<div style=\"color: rgb(33, 150, 243);\" class=
\"pe-ripple pe-ripple--constrained\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Option: style (white) -- dark theme 1`] = `
"<div style=\"color: rgb(255, 255, 255);\" class=
\"pe-ripple pe-ripple--constrained\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;

exports[`test Themed (should be red and permanent) 1`] = `
"<div class=
\"pe-ripple pe-ripple--constrained tests-ripple-themed-ripple\">
  <div class=\"pe-ripple__mask\">
    <div class=\"pe-ripple__waves\"></div>
  </div>
</div>
"
`;
